// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passes test case report to '@actions/core' when a test has reference error 1`] = `
Array [
  "
::error file=/user/project/__tests__/quick.test.js:25:12,line=25,title=some test::ReferenceError: abc is not defined%0A%0A    at Object.abc (/user/project/__tests__/quick.test.js:25:12)
",
]
`;

exports[`passes test case report to '@actions/core' when expect returns an error 1`] = `
Array [
  "
::error file=/user/project/__tests__/quick.test.js,line=20,title=some test::expect(received).toBe(expected) // Object.is equality%0A%0AExpected: 1%0AReceived: 10%0A%0A    at Object.toBe (/user/project/__tests__/quick.test.js:20:14)
",
]
`;

exports[`passes test case report to '@actions/core' when test is wrapped in describe block 1`] = `
Array [
  "
::error file=/user/project/__tests__/quick.test.js,line=20,title=describe › some test::expect(received).toBe(expected) // Object.is equality%0A%0AExpected: 1%0AReceived: 10%0A%0A    at Object.toBe (/user/project/__tests__/quick.test.js:20:14)
",
]
`;

exports[`passes test case report to '@actions/core' when test not is wrapped in describe block 1`] = `
Array [
  "
::error file=/user/project/__tests__/quick.test.js,line=20,title=some test::expect(received).toBe(expected) // Object.is equality%0A%0AExpected: 1%0AReceived: 10%0A%0A    at Object.toBe (/user/project/__tests__/quick.test.js:20:14)
",
]
`;
